[gd_scene load_steps=7 format=3 uid="uid://b71eke4c3uhn4"]

[ext_resource type="Script" path="res://escenas/main.gd" id="1_50ryp"]
[ext_resource type="Texture2D" uid="uid://doi08wvw8o2ig" path="res://sprites/iconos/iconoAnt.png" id="1_ekhws"]
[ext_resource type="Texture2D" uid="uid://bkqf7v5eorq62" path="res://sprites/iconos/iconoPausa.png" id="1_hp3tm"]
[ext_resource type="Texture2D" uid="uid://dven5kf4p4cp3" path="res://sprites/iconos/iconoSigAnt.png" id="2_ewo11"]
[ext_resource type="FontFile" uid="uid://buhblr2sdi1dw" path="res://Fuente Texto.ttf" id="4_hlhh2"]
[ext_resource type="Texture2D" uid="uid://c0t0sp6as4p0m" path="res://sprites/artistas/ErikSatie.jpg" id="5_vkfdj"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_50ryp")

[node name="Botones" type="Node" parent="."]

[node name="BotSonAnterior" type="Button" parent="Botones"]
offset_left = 451.0
offset_top = 82.0
offset_right = 515.0
offset_bottom = 146.0
icon = ExtResource("1_ekhws")
icon_alignment = 1

[node name="BotSonSig" type="Button" parent="Botones"]
offset_left = 579.0
offset_top = 82.0
offset_right = 643.0
offset_bottom = 146.0
icon = ExtResource("2_ewo11")
icon_alignment = 1

[node name="BotPausePlay" type="Button" parent="Botones"]
offset_left = 515.0
offset_top = 170.0
offset_right = 579.0
offset_bottom = 234.0
icon = ExtResource("1_hp3tm")
icon_alignment = 1

[node name="Toggles" type="Node" parent="."]

[node name="ToggleLoop" type="CheckBox" parent="Toggles"]
offset_left = 64.0
offset_top = 424.0
offset_right = 252.0
offset_bottom = 503.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 50
text = "Loop?"
icon_alignment = 1

[node name="ToggleTRest" type="CheckBox" parent="Toggles"]
offset_left = 64.0
offset_top = 520.0
offset_right = 292.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 50
text = "T Rest?"
icon_alignment = 1

[node name="Imagen" type="Sprite2D" parent="."]
position = Vector2(160, 160)
texture = ExtResource("5_vkfdj")

[node name="TodosTitulos" type="Label" parent="."]
offset_left = 782.0
offset_top = 24.0
offset_right = 1081.0
offset_bottom = 616.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 15
text = "1.Musica 
2.Musica 2
3.Musica 3
4.Musica 4"

[node name="TituloActual" type="Label" parent="."]
offset_left = 16.0
offset_top = 280.0
offset_right = 320.0
offset_bottom = 317.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 23
text = "Textotextotextotexto.uwu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tiempo" type="Node" parent="."]

[node name="BarraTiempo" type="HSlider" parent="Tiempo"]
offset_left = 40.0
offset_top = 352.0
offset_right = 272.0
offset_bottom = 368.0

[node name="TiempoDer" type="Label" parent="Tiempo"]
offset_left = 240.0
offset_top = 376.0
offset_right = 295.0
offset_bottom = 402.0
theme_override_fonts/font = ExtResource("4_hlhh2")
text = "00:00"

[node name="TiempoIzqu" type="Label" parent="Tiempo"]
offset_left = 16.0
offset_top = 376.0
offset_right = 71.0
offset_bottom = 402.0
theme_override_fonts/font = ExtResource("4_hlhh2")
text = "00:00"

[node name="Volumen" type="Node" parent="."]

[node name="SliderVolumen" type="HSlider" parent="Volumen"]
offset_left = 339.0
offset_top = 336.0
offset_right = 571.0
offset_bottom = 352.0
scale = Vector2(1.75, 1.75)
max_value = 10.0
value = 5.0
metadata/_edit_use_anchors_ = true

[node name="TiempoDer" type="Label" parent="Volumen"]
offset_left = 715.0
offset_top = 360.0
offset_right = 770.0
offset_bottom = 399.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TiempoIzqu" type="Label" parent="Volumen"]
offset_left = 323.0
offset_top = 360.0
offset_right = 378.0
offset_bottom = 399.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TituloVolumen" type="Label" parent="Volumen"]
offset_left = 483.0
offset_top = 280.0
offset_right = 613.0
offset_bottom = 326.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 30
text = "Volumen"

[node name="ValorVolumen" type="Label" parent="Volumen"]
offset_left = 483.0
offset_top = 360.0
offset_right = 613.0
offset_bottom = 406.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 30
text = "[5]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Velocidad" type="Node" parent="."]

[node name="SliderVel" type="HSlider" parent="Velocidad"]
offset_left = 339.0
offset_top = 504.0
offset_right = 571.0
offset_bottom = 520.0
scale = Vector2(1.75, 1.75)
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="VelDer" type="Label" parent="Velocidad"]
offset_left = 715.0
offset_top = 528.0
offset_right = 770.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 25
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VelCentro" type="Label" parent="Velocidad"]
offset_left = 523.0
offset_top = 528.0
offset_right = 578.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 25
text = "[1]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VelIzqu" type="Label" parent="Velocidad"]
offset_left = 323.0
offset_top = 528.0
offset_right = 378.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 25
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TituloVel" type="Label" parent="Velocidad"]
offset_left = 483.0
offset_top = 448.0
offset_right = 629.0
offset_bottom = 494.0
theme_override_fonts/font = ExtResource("4_hlhh2")
theme_override_font_sizes/font_size = 30
text = "Velocidad"

[node name="Audio" type="Node" parent="."]

[node name="Musica" type="AudioStreamPlayer2D" parent="Audio"]
autoplay = true
bus = &"Musica"

[connection signal="pressed" from="Botones/BotSonAnterior" to="." method="_on_bot_son_anterior_pressed"]
[connection signal="pressed" from="Botones/BotSonSig" to="." method="_on_bot_son_sig_pressed"]
[connection signal="pressed" from="Botones/BotPausePlay" to="." method="_on_bot_pause_play_pressed"]
[connection signal="value_changed" from="Tiempo/BarraTiempo" to="." method="_on_barra_tiempo_value_changed"]
[connection signal="value_changed" from="Volumen/SliderVolumen" to="." method="_on_slider_volumen_value_changed"]
[connection signal="value_changed" from="Velocidad/SliderVel" to="." method="_on_slider_vel_value_changed"]
